fix(frontend): Align page title to the left

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -180,6 +180,7 @@ textarea {
 }
 
 .page--title-main {
+  text-align: left;
   margin: 0;
 }
 
